--- a/FilmApi/Shared/MainLayout.razor.css
+++ b/FilmApi/Shared/MainLayout.razor.css
@@ -1,70 +1,31 @@
-.page {
-    position: relative;
-    display: flex;
-    flex-direction: column;
+header {
+    background-color: #06266F;
+    border: 2px solid black;
+
 }
 
-main {
-    flex: 1;
+h1 {
+    color: white;
+    padding-left: 30px;
 }
 
-.sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+footer {
+    background-color: #06266F;
+    border: 2px solid black;
 }
 
-.top-row {
-    background-color: #f7f7f7;
-    border-bottom: 1px solid #d6d5d5;
-    justify-content: flex-end;
-    height: 3.5rem;
-    display: flex;
-    align-items: center;
+.social {
+    text-align: center;
 }
 
-    .top-row ::deep a, .top-row .btn-link {
-        white-space: nowrap;
-        margin-left: 1.5rem;
-    }
-
-    .top-row a:first-child {
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
-
-@media (max-width: 640.98px) {
-    .top-row:not(.auth) {
-        display: none;
-    }
-
-    .top-row.auth {
-        justify-content: space-between;
-    }
-
-    .top-row a, .top-row .btn-link {
-        margin-left: 0;
-    }
+.socialBtn {
+    width: 40px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 20px
 }
 
-@media (min-width: 641px) {
-    .page {
-        flex-direction: row;
-    }
-
-    .sidebar {
-        width: 250px;
-        height: 100vh;
-        position: sticky;
-        top: 0;
-    }
-
-    .top-row {
-        position: sticky;
-        top: 0;
-        z-index: 1;
-    }
-
-    .top-row, article {
-        padding-left: 2rem !important;
-        padding-right: 1.5rem !important;
-    }
+body {
+    width: 1300px;
+    margin: auto;
 }
